ensure test reports are junit format in assertions.xml