@@ -2,14 +2,16 @@ package org.broadinstitute.consent.performance;
 
 
 import static io.gatling.javaapi.core.CoreDsl.atOnceUsers;
+import static io.gatling.javaapi.core.CoreDsl.details;
 import static io.gatling.javaapi.http.HttpDsl.http;
 
+import io.gatling.javaapi.core.ScenarioBuilder;
 import io.gatling.javaapi.core.Simulation;
 import io.gatling.javaapi.http.HttpProtocolBuilder;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.broadinstitute.consent.performance.scenarios.Status;
+import org.broadinstitute.consent.performance.scenarios.Status.ScenarioTest;
 
 
 /**
@@ -27,11 +29,20 @@ public class TestRunner extends Simulation {
       .userAgentHeader("Mozilla/5.0 (Windows NT 5.1; rv:31.0) Gecko/20100101 Firefox/31.0");
 
   {
+    List<ScenarioTest> scenarioTests = new Status().scenarioTests;
+    List<ScenarioBuilder> scenarios = scenarioTests
+        .stream()
+        .map(ScenarioTest::scenarioBuilder)
+        .toList();
+    List<String> scenarioNames = scenarioTests.stream().map(ScenarioTest::name).toList();
     setUp(
-        Stream.of(new Status().tests)
+        Stream.of(scenarios)
             .flatMap(List::stream)
             .map(scn -> scn.injectOpen(atOnceUsers(1)))
-            .collect(Collectors.toList())
-    ).protocols(protocol);
+            .toList())
+        .assertions(
+            scenarioNames.stream()
+                .map(name -> details(name).successfulRequests().percent().is(100.0)).toList())
+        .protocols(protocol);
   }
 }
